--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,53 @@
-html,
+@import url("https://use.typekit.net/wdw5vaa.css");
+
+:root {
+  --padding-global: 1.5rem;
+
+  --color-bg: #faf8f7;
+  /* --color-bg: #faf8f7; */
+  --color-text: #070707;
+  /* --color-text: #1d2021; */
+  --color-red: #f20e0e;
+  --color-yellow: #d79921;
+}
+
+::selection {
+  background-color: var(--color-text);
+  color: var(--color-bg);
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: input-mono, monospace;
+  font-size: 14px;
+  line-height: 1;
+
+  background-color: var(--color-bg);
+  color: var(--color-text);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+p {
+  max-width: 80ch;
 }
 
-* {
-  box-sizing: border-box;
+h1,
+.h1-style {
+  font-family: neue-haas-grotesk-display, sans-serif;
+  font-size: 3rem;
+  line-height: 0.9;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+h2,
+.h2-style {
+  font-family: neue-haas-grotesk-display, sans-serif;
+  font-size: 1.5rem;
+  line-height: 1.1;
+}
+
+.paragraph {
+  line-height: 1.5;
+  text-align: justify;
+}
+
+.arrow {
+  font-family: input-mono, monospace;
 }
