--- a/styles/components/WorkCard.module.css
+++ b/styles/components/WorkCard.module.css
@@ -44,8 +44,12 @@
   font-family: neue-haas-grotesk-display, sans-serif;
 }
 
-.workCardImage {
+.workImageContainer {
   height: 30rem;
+  padding: var(--padding-global);
+}
+.workCardImage {
+  height: 100%;
   background-color: gray;
 }
 
@@ -56,5 +60,7 @@
 }
 
 .workCardTitle {
+  border-top: 1px solid var(--color-text);
+
   padding: 0.75rem calc(var(--padding-global) / 2);
 }
