--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,3 +51,8 @@ h2,
 .arrow {
   font-family: input-mono, monospace;
 }
+
+.sectionHeading {
+  margin-bottom: 2rem;
+  text-transform: uppercase;
+}
